--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px 40px;
+  background-color: #45ea98;
+  color: #fff;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.new-thread-button {
+  height: 30px;
+  color: #fff;
+  display: block;
+  background-color: transparent;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  text-align: center;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+ul {
+  padding: 0;
+}
+
+.threads-list {
+  display: flex;
+  list-style: none;
+  padding: 15px;
+  margin-left: 0;
+  margin: 0px 360px;
+  border: 1px solid #666;
+  border-radius: 2px;
+}
+
+.new-thread-title {
+  width: 200px;
+  height: 30px;
+  display: block;
+  margin: 70px auto;
+  border-radius: 8px;
+}
+
+.back {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.back-link {
+  margin-right: 50px;
 }
